# mkDevShell

./: default.nix  export-dev-env  export-nix-env  exportFixes.nix  mkDevShell.nix
.reuse/: dep5
make_shell/: Cargo.toml  default.nix
make_shell/src/: main.rs
