[package]
name = "make_shell"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.76"
bpaf = { version = "0.9.8", features = [
    "autocomplete",
    "docgen",
    "bright-color",
    "derive",
] }
heck = "0.4.1"
toml = "0.8.8"
xshell = "0.2.5"
